# enigma2-plugins-downskinlib

./: Makefile.am  configure.ac
DownSkinLIB/: version
DownSkinLIB/CONTROL/: control
DownSkinLIB/buttons/: Makefile.am
DownSkinLIB/locale/de/LC_MESSAGES/: Makefile.am
DownSkinLIB/src/: Makefile.am  plugin.py
DownSkinLIB/src/locale/ru/LC_MESSAGES/: Makefile.am
DownSkinLIB/src/locale/uk/LC_MESSAGES/: Makefile.am
